# wide-boy-64-agb-ts2

./: .clang-format  .gitignore  1000.s  CMakeLists.txt  Makefile  build.sh  diff_settings.py  header.s  symbol_addrs.txt  wideboy.yaml
common/include/: include_asm.h
common/include/PR/: ultratypes.h
libkmc/src/: cputs.s  mmuldi3.s  modf.s  printf.s  putch.s  putchar.s  strcpy.s  syscall.s
libnustd/include/: common.h  malloc.h  math.h  mathdef.h
libnustd/src/: exp.c  fabs.s  frexp.c  log.c  malloc.c  pow.c
libnusys/include/: nusys.h
libnusys/src/: nuboot.c  nucontdatagetex.c  nucontdatalock.c  nucontinit.c  nucontmgr.c  nucontpakmgr.c  nucontqueryread.c  nucontrmbmgr.c  nueeprommgr.c  nugfxdisplayoff.c  nugfxdisplayon.c  nugfxfuncset.c  nugfxinit.c  nugfxsetcfb.c  nugfxswapcfb.c  nugfxswapcfbfuncset.c  nugfxtaskallendwait.c  nugfxtaskmgr.c  nugfxthread.c  nupiinit.c  nusched.c  nusicallbackadd.c  nusicallbackremove.c  nusimgr.c
libultra/src/: afterprenmi.c  assert.c  bcmp.s  bcopy.s  bzero.s  cartrominit.c  conteeplongread.c  conteeplongwrite.c  conteepprobe.c  conteepread.c  conteepwrite.c  contpfs.c  contquery.c  contramread.c  contramwrite.c  contreaddata.c  controller.c  crc.c  createmesgqueue.c  createthread.c  destroythread.c  devmgr.c  dpctr.c  dpsetstat.c  epidma.c  epirawdma.c  epirawread.c  epirawwrite.c  epiread.c  epiwrite.c  error.c  errorasm.c  exceptasm.s  getactivequeue.s  getcause.s  getcount.s  getsr.s  getthreadpri.c  gettime.c  initialize.c  (+100 more)
main/include/: common.h
main/src/: 1050.c  19D0.c  1AF0.c  4030.c  4400.c  5140.c  5330.c
